# cmcs

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE-SNIPPET.md  CLAUDE.md  README.md  pyproject.toml
cmcs/: __init__.py  cli.py  config.py  db.py  runner.py  tickets.py  worktree.py
cmcs/dashboard/: app.py
cmcs/dashboard/templates/: index.html
cmcs/tests/: conftest.py  test_cli.py  test_config.py  test_dashboard.py  test_db.py  test_integration.py  test_runner.py  test_tickets.py  test_worktree.py
docs/: architecture.md  cmcs-base.md  cmcs-large-implementation-preparation.md  configuration.md  model-selection.md  orchestration-guide.md
skill/: SKILL.md  code-quality-reviewer-prompt.md  spec-reviewer-prompt.md  ticket-template.md
