[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cmcs"
version = "0.1.0"
description = "Claude Master Codex Slave — orchestration CLI"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.9",
    "pyyaml>=6.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "httpx"]

[project.scripts]
cmcs = "cmcs.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["cmcs*"]
