[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cmcs"
version = "0.3.1"
description = "Claude Master Codex Slave — orchestration CLI"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.9",
    "pyyaml>=6.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "httpx"]

[project.scripts]
cmcs = "cmcs.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["cmcs*"]

[tool.setuptools.package-data]
cmcs = ["py.typed", "dashboard/templates/*.html"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
